[css] updated css for the new flex dropdown menu.

--- a/src/web/partial/header.html
+++ b/src/web/partial/header.html
@@ -12,13 +12,13 @@
         </div>
 
         <div class="navbar-collapse collapse" id="navbar-menu">
-            <ul class="nav navbar-nav navbar-right">
+            <!-- <ul class="nav navbar-nav navbar-right"> -->
                 {{#is lang "ja"}}
                     {{> navigation.ja }}
                 {{else}}
                     {{> navigation.en }}
                 {{/is}}
-            </ul>
+            <!-- </ul> -->
         </div>
 
     </div>
