--- a/src/web/partial/navigation.en.html
+++ b/src/web/partial/navigation.en.html
@@ -1,39 +1,43 @@
-<li class="dropdown">
-  <a href="#" class="dropdown-toggle" data-toggle="dropdown">Products</a>
-  <ul class="dropdown-menu">
-    <li><a href="https://monaca.io/cloud.html">Monaca Cloud</a></li>
-    <li><a href="https://monaca.io/visualstudio.html">Monaca for Visual Studio</a></li>
-    <li><a href="https://monaca.io/debugger.html">Monaca Debugger</a></li>
-    <li><a href="https://monaca.io/localkit.html">Monaca Localkit</a></li>
-    <li><a href="http://onsen.io/">Onsen UI</a></li>
-    <li><a href="https://monaca.io/enterprise.html">Monaca Enterprise</a></li>
-  </ul>
-</li>
+<nav class="navbar-right">
+    <ul>
+        <li class="nav-sub-menu-parent">
+            <a href="#">Products</a>
+            <ul class="sub-menu">
+                <li><a href="https://monaca.io/cloud.html">Monaca Cloud</a></li>
+                <li><a href="https://monaca.io/visualstudio.html">Monaca for Visual Studio</a></li>
+                <li><a href="https://monaca.io/debugger.html">Monaca Debugger</a></li>
+                <li><a href="https://monaca.io/localkit.html">Monaca Localkit</a></li>
+                <li><a href="http://onsen.io/">Onsen UI</a></li>
+                <li><a href="https://monaca.io/enterprise.html">Monaca Enterprise</a></li>
+            </ul>
+        </li>
 
-<li>
-  <a href="https://monaca.io/pricing.html">Pricing</a>
-</li>
+        <li>
+          <a href="https://monaca.io/pricing.html">Pricing</a>
+        </li>
 
-<li class="dropdown">
-  <a href="#" class="dropdown-toggle" data-toggle="dropdown">Resources</a>
-     <ul class="dropdown-menu">
-      <li><a href="https://monaca.io/headline/">Updates</a></li>
-      <li><a href="https://docs.monaca.io/en/">Docs</a></li>
-      <li><a href="https://monaca.io/great-apps.html">Showcase</a></li>
-      <li><a href="http://monaca.mobi/en/forum">Forum</a></li>
-      <li><a href="https://monaca.io/product-partner/">Partner</a></li>
-  </ul>
-</li>
+        <li class="nav-sub-menu-parent">
+            <a href="#" class="dropdown-toggle" data-toggle="dropdown">Resources</a>
+            <ul class="sub-menu">
+                <li><a href="https://monaca.io/headline/">Updates</a></li>
+                <li><a href="https://docs.monaca.io/en/">Docs</a></li>
+                <li><a href="https://monaca.io/great-apps.html">Showcase</a></li>
+                <li><a href="http://monaca.mobi/en/forum">Forum</a></li>
+                <li><a href="https://monaca.io/product-partner/">Partner</a></li>
+            </ul>
+        </li>
 
-<li>
-  <a href="https://onsen.io/blog/" target="_blank">Blog</a>
-</li>
+        <li>
+          <a href="https://onsen.io/blog/" target="_blank">Blog</a>
+        </li>
 
-<li>
-  <a href="https://monaca.io/service/">Services</a>
-</li>
+        <li>
+          <a href="https://monaca.io/service/">Services</a>
+        </li>
 
-<li><a href="https://monaca.mobi/en/register/start">Sign Up</a></li>
-<li><a href="https://monaca.io/login">Login</a></li>
+        <li><a href="https://monaca.mobi/en/register/start">Sign Up</a></li>
+        <li><a href="https://monaca.io/login">Login</a></li>
 
-<li><a href="javascript:void(0)" onclick="switchLanguage('{{lang}}','ja')">日本語</a></li>
+        <li><a href="javascript:void(0)" onclick="switchLanguage('{{lang}}','ja')">日本語</a></li>
+    </ul>
+</nav>
