--- a/src/web/partial/navigation.ja.html
+++ b/src/web/partial/navigation.ja.html
@@ -1,70 +1,74 @@
-<li class="dropdown">
-  <a href="#" class="dropdown-toggle" data-toggle="dropdown">製品</a>
-  <ul class="dropdown-menu">
-    <li><a href="https://ja.monaca.io/cloud.html">Monacaクラウド</a></li>
-    <li><a href="https://ja.monaca.io/visualstudio.html">Monaca for Visual Studio</a></li>
-    <li><a href="https://ja.monaca.io/debugger.html">Monacaデバッガー</a></li>
-    <li><a href="https://ja.monaca.io/localkit.html">Monaca Localkit</a></li>
-    <li><a href="https://ja.monaca.io/academic.html">Monacaアカデミックプラン</a></li>
-    <li><a href="http://ja.onsen.io/" target="_blank" rel="nofollow">Onsen UI <i class="fa fa-external-link"></i></a></li>
-    <li><a href="https://ja.monaca.io/enterprise.html">Monacaエンタープライズ</a></li>
-  </ul>
-</li>
+<nav class="navbar-right">
+    <ul>
+        <li class="nav-sub-menu-parent">
+            <a href="#">製品</a>
+            <ul class="sub-menu">
+                <li><a href="https://ja.monaca.io/cloud.html">Monacaクラウド</a></li>
+                <li><a href="https://ja.monaca.io/visualstudio.html">Monaca for Visual Studio</a></li>
+                <li><a href="https://ja.monaca.io/debugger.html">Monacaデバッガー</a></li>
+                <li><a href="https://ja.monaca.io/localkit.html">Monaca Localkit</a></li>
+                <li><a href="https://ja.monaca.io/academic.html">Monacaアカデミックプラン</a></li>
+                <li><a href="http://ja.onsen.io/" target="_blank" rel="nofollow">Onsen UI <i class="fa fa-external-link"></i></a></li>
+                <li><a href="https://ja.monaca.io/enterprise.html">Monacaエンタープライズ</a></li>
+            </ul>
+        </li>
 
-<li>
-  <a href="https://monaca.io/pricing.html">料金</a>
-</li>
+        <li>
+           <a href="https://monaca.io/pricing.html">料金</a>
+        </li>
 
-<li class="dropdown">
-  <a href="#" class="dropdown-toggle" data-toggle="dropdown">パートナー</a>
-  <ul class="dropdown-menu">
-    <li><a href="https://ja.monaca.io/solution-partner/">開発パートナー制度</a></li>
-    <li><a href="https://ja.monaca.io/solution-partner/list.html">開発パートナー企業紹介</a></li>
-    <li><a href="https://ja.monaca.io/product-partner/">プロダクトパートナー</a></li>
-  </ul>
-</li>
+        <li class="nav-sub-menu-parent">
+            <a href="#">パートナー</a>
+            <ul class="sub-menu">
+                <li><a href="https://ja.monaca.io/solution-partner/">開発パートナー制度</a></li>
+                <li><a href="https://ja.monaca.io/solution-partner/list.html">開発パートナー企業紹介</a></li>
+                <li><a href="https://ja.monaca.io/product-partner/">プロダクトパートナー</a></li>
+            </ul>
+        </li>
 
-<li class="dropdown">
-  <a href="#" class="dropdown-toggle" data-toggle="dropdown">サポート・サービス</a>
-  <ul class="dropdown-menu">
-    <li><a href="https://ja.monaca.io/support.html">サポート・サービス概要</a></li>
-    <li><a href="https://ja.monaca.io/service/training.html">トレーニング</a></li>
-    <li><a href="https://ja.monaca.io/service/">サポート受付</a></li>
-    <li><a href="https://ja.monaca.io/development.html">アプリ開発依頼</a></li>
-  </ul>
-</li>
+        <li class="nav-sub-menu-parent">
+            <a href="#">サポート・サービス</a>
+            <ul class="sub-menu">
+                <li><a href="https://ja.monaca.io/support.html">サポート・サービス概要</a></li>
+                <li><a href="https://ja.monaca.io/service/training.html">トレーニング</a></li>
+                <li><a href="https://ja.monaca.io/service/">サポート受付</a></li>
+                <li><a href="https://ja.monaca.io/development.html">アプリ開発依頼</a></li>
+            </ul>
+        </li>
 
-<li class="dropdown">
-  <a href="#" class="dropdown-toggle" data-toggle="dropdown">活用事例</a>
-  <ul class="dropdown-menu">
-    <li><a href="https://ja.monaca.io/great-apps.html">アプリ事例</a></li>
-    <li><a href="https://ja.monaca.io/showcase/">導入事例</a></li>
-  </ul>
-</li>
+        <li class="nav-sub-menu-parent">
+            <a href="#">活用事例</a>
+            <ul class="sub-menu">
+                <li><a href="https://ja.monaca.io/great-apps.html">アプリ事例</a></li>
+                <li><a href="https://ja.monaca.io/showcase/">導入事例</a></li>
+            </ul>
+        </li>
 
-<li>
-  <a href="http://docs.monaca.io/ja/">ドキュメント</a>
-</li>
+        <li>
+            <a href="http://docs.monaca.io/ja/">ドキュメント</a>
+        </li>
 
-<li class="dropdown">
-  <a href="#" class="dropdown-toggle" data-toggle="dropdown">お知らせ</a>
-  <ul class="dropdown-menu">
-    <li><a href="http://ja.onsen.io/blog/" target="_blank" rel="nofollow">ブログ <i class="fa fa-external-link"></i></a></li>
-    <li><a href="https://ja.monaca.io/headline/">ニュース・更新情報</a></li>
-    <li><a href="https://ja.monaca.io/headline/fault.html">障害・不具合情報</a></li>
-  </ul>
-</li>
+        <li class="nav-sub-menu-parent">
+            <a href="#">お知らせ</a>
+            <ul class="sub-menu">
+                <li><a href="http://ja.onsen.io/blog/" target="_blank" rel="nofollow">ブログ <i class="fa fa-external-link"></i></a></li>
+                <li><a href="https://ja.monaca.io/headline/">ニュース・更新情報</a></li>
+                <li><a href="https://ja.monaca.io/headline/fault.html">障害・不具合情報</a></li>
+            </ul>
+        </li>
 
-<li class="dropdown">
-  <a href="#" class="dropdown-toggle" data-toggle="dropdown">お問い合わせ</a>
-  <ul class="dropdown-menu">
-    <li><a href="https://ja.monaca.io/service/">サポート受付</a></li>
-    <li><a href="https://ja.monaca.io/support/inquiry.html">お問い合わせ</a></li>
-    <li><a href="https://ja.monaca.io/development.html">アプリ開発依頼</a></li>
-    <li><a href="https://ja.monaca.io/careers.html">採用情報</a></li>
-  </ul>
-</li>
+        <li class="nav-sub-menu-parent">
+            <a href="#">お問い合わせ</a>
+            <ul class="sub-menu">
+                <li><a href="https://ja.monaca.io/service/">サポート受付</a></li>
+                <li><a href="https://ja.monaca.io/support/inquiry.html">お問い合わせ</a></li>
+                <li><a href="https://ja.monaca.io/development.html">アプリ開発依頼</a></li>
+                <li><a href="https://ja.monaca.io/careers.html">採用情報</a></li>
+            </ul>
+        </li>
 
-<li><a href="https://monaca.mobi/ja/register/start">サインアップ</a></li>
-<li><a href="https://ja.monaca.io/login">ログイン</a></li>
-<li><a href="javascript:void(0)" onclick="switchLanguage('{{lang}}','en')">English</a></li>
+        <li><a href="https://monaca.mobi/ja/register/start">サインアップ</a></li>
+        <li><a href="https://ja.monaca.io/login">ログイン</a></li>
+        <li><a href="javascript:void(0)" onclick="switchLanguage('{{lang}}','en')">English</a></li>
+    </ul>
+</nav>
