--- a/src/web/static/css/common.css
+++ b/src/web/static/css/common.css
@@ -538,8 +538,23 @@ header.navbar {
   header.navbar a:visited {
     text-decoration: none; }
   header.navbar .container {
-    padding: 0px 80px;
-    background-color: #2687ea; }
+    /*padding: 0px 80px;*/
+    background-color: #2687ea;
+    /*new menu bar*/
+    /*.sub-menu {
+            border: 1px solid #ebebeb;
+            background: #FFF;
+            border-radius: 3px;
+            width: 167px;
+            padding: 10px 0;
+            margin-left: 0px;
+            margin-top: 5px ;
+            text-align: left;
+            li > a {color: #333; font-size: 13px; font-weight: normal;}
+            li > a:hover {background-color: #ebebeb}
+        }*/
+    /*new menu bar*/
+    /*//bootstrap init*/ }
     header.navbar .container .header-accordion {
       background-color: #222;
       max-height: 0;
@@ -561,18 +576,90 @@ header.navbar {
       max-height: 850px; }
     header.navbar .container .header-accordion.loggedin.on:lang(ja) {
       max-height: 1420px; }
+    @media screen and (min-width: 767px) {
+      header.navbar .container .nav-sub-menu-parent {
+        position: relative; } }
+    @media screen and (max-width: 767px) {
+      header.navbar .container .nav-sub-menu-parent {
+        color: #fff; } }
+    header.navbar .container .sub-menu {
+      text-align: left; }
+      @media screen and (min-width: 767px) {
+        header.navbar .container .sub-menu {
+          position: absolute;
+          visibility: hidden;
+          /* hides sub-menu */
+          opacity: 0;
+          top: 100%;
+          left: 0;
+          width: 100%;
+          transform: translateY(-2em);
+          z-index: -1;
+          transition: all 0.3s ease-in-out 0s, visibility 0s linear 0.3s, z-index 0s linear 0.01s;
+          border: 1px solid #ebebeb;
+          background: #FFF;
+          border-radius: 3px;
+          width: 167px;
+          padding: 10px 0;
+          margin-left: 0px;
+          margin-top: 5px; }
+          header.navbar .container .sub-menu li > a {
+            color: #333;
+            font-size: 13px;
+            font-weight: normal; }
+          header.navbar .container .sub-menu li > a:hover {
+            color: #333;
+            background-color: #ebebeb; } }
+      @media screen and (max-width: 767px) {
+        header.navbar .container .sub-menu {
+          background: none;
+          margin-left: 25px; }
+          header.navbar .container .sub-menu a {
+            color: #c0c0c0;
+            font-weight: normal; } }
+    header.navbar .container .nav-sub-menu-parent:hover .sub-menu {
+      visibility: visible;
+      /* shows sub-menu */
+      opacity: 1;
+      z-index: 1;
+      transform: translateY(0%);
+      transition-delay: 0s, 0s, 0.3s;
+      /* this removes the transition delay so the menu will be visible while the other styles transition */ }
+    header.navbar .container nav a {
+      color: #c0c0c0;
+      /*color: #fff;*/
+      font-size: 15px;
+      font-weight: bold;
+      display: block;
+      padding: 0.5em 1em;
+      text-decoration: none; }
+      @media screen and (max-width: 767px) {
+        header.navbar .container nav a {
+          color: #fff;
+          text-align: left; } }
+    header.navbar .container nav a:hover {
+      color: #FFF; }
+    header.navbar .container nav ul,
+    header.navbar .container nav ul li {
+      list-style-type: none;
+      padding: 0;
+      margin: 0; }
+    header.navbar .container nav > ul {
+      text-align: center;
+      margin: 5px 0; }
+    @media screen and (min-width: 767px) {
+      header.navbar .container nav > ul > li {
+        display: inline-block; } }
+    header.navbar .container nav > ul > li:first-child {
+      border-left: none; }
     header.navbar .container .navbar-header {
       margin: 0; }
       header.navbar .container .navbar-header .navbar-brand {
         margin: 0;
         padding: 13px 0; }
-        @media screen and (max-width: 767px) {
-          header.navbar .container .navbar-header .navbar-brand {
-            padding-left: 16px; } }
         header.navbar .container .navbar-header .navbar-brand img {
           width: 110px;
-          left: 20px;
-          /*position: absolute;*/ }
+          left: 20px; }
       header.navbar .container .navbar-header .navbar-toggle {
         background-color: rgba(0, 0, 0, 0.16);
         border-radius: 0;
@@ -619,24 +706,16 @@ header.navbar {
             width: 12px; }
     header.navbar .container .navbar-collapse {
       background-color: #2687ea;
-      border-top: none;
-      box-shadow: none;
-      float: none; }
+      margin-bottom: 10px; }
+      @media screen and (max-width: 767px) {
+        header.navbar .container .navbar-collapse {
+          background-color: #2c2c2c;
+          border-top: none;
+          box-shadow: none;
+          float: none;
+          margin: 0; } }
       header.navbar .container .navbar-collapse .navbar-right {
         margin-right: 0; }
-      header.navbar .container .navbar-collapse .navbar-left {
-        margin-left: 0; }
-      @media screen and (max-width: 766px) {
-        header.navbar .container .navbar-collapse {
-          background-image: -webkit-linear-gradient(top, rgba(0, 0, 0, 0.16), #2c2c2c);
-          background-image: linear-gradient(to bottom, rgba(0, 0, 0, 0.16), #2c2c2c 60%);
-          float: none;
-          margin-left: 0;
-          margin-right: 0; } }
-      @media screen and (min-width: 641px) {
-        header.navbar .container .navbar-collapse {
-          padding-left: 15px;
-          padding-right: 0; } }
     header.navbar .container .navbar-nav .dashboard {
       text-decoration: underline; }
     header.navbar .container .navbar-nav .nav-title {
@@ -737,41 +816,83 @@ header.navbar {
         padding: 0 0 0 30px;
         line-height: 39px; } }
 
-@media screen and (min-width: 767px) and (max-width: 860px) {
-  html[lang=en] .navbar-nav > li > a {
-    font-size: 14px;
-    padding-left: 8px;
-    padding-right: 8px; } }
+/*SCREEN SETTING*/
+/*html[lang=en] {*/
+/*PC version*/
+@media screen and (min-width: 767px) {
+  div.container, header.global {
+    padding: 0 80px; } }
 
-@media screen and (min-width: 767px) and (max-width: 860px) {
-  html[lang=en] .navbar-nav .nav-title {
-    padding-left: 10px;
-    padding-right: 10px; } }
+@media screen and (max-width: 767px) {
+  header.global {
+    padding: 30px 25px 15px 25px; }
+  div.container {
+    padding: 10px 25px 25px 25px; } }
 
-@media screen and (min-width: 767px) and (max-width: 820px) {
-  html[lang=en] .navbar-nav .nav-title {
-    padding-left: 2px;
-    padding-right: 2px; } }
+/*}
 
-@media screen and (max-width: 1170px) {
-  html[lang=ja] .navbar-nav > li > a {
-    font-size: 14px;
-    padding: 16px 10px 14px; } }
+// Desktop header toolbar: margin fix*/
+/*@media screen and (min-width: $break) {
+    html[lang=en] {
 
-@media screen and (max-width: 1000px) {
-  html[lang=ja] .navbar-nav > li > a {
-    font-size: 14px;
-    padding: 16px 6px 14px; } }
-
-@media screen and (max-width: 860px) {
-  html[lang=ja] .navbar-nav > li > a {
-    font-size: 14px;
-    padding: 16px 4px 14px; } }
-
-@media screen and (max-width: 1070px) {
-  html[lang=ja] .navbar-nav > li > a .opt {
-    display: none; } }
-
+        .navbar-nav > li > a {
+            @media screen and (max-width: 860px) {
+                font-size: 14px;
+                padding-left: 8px;
+                padding-right:8px;
+            }
+        }
+        .navbar-nav {
+            .nav-title {
+                @media screen and (max-width: 860px) {
+                    padding-left: 10px;
+                    padding-right: 10px;
+                }
+                @media screen and (max-width: 820px) {
+                    padding-left: 2px;
+                    padding-right: 2px;
+                }
+            }
+        }
+    }
+}*/
+/*html[lang=ja] {
+    .navbar-nav > li > a {
+        @media screen and (max-width: $width) {
+            font-size: 14px;
+            padding: 16px 10px 14px;
+        }
+        @media screen and (max-width: 1000px) {
+            font-size: 14px;
+            padding: 16px 6px 14px;
+        }
+        @media screen and (max-width: 860px) {
+            font-size: 14px;
+            padding: 16px 4px 14px;
+        }
+        // @media screen and (max-width: 1170px) {
+        //     //padding-left: 8px;
+        //     //padding-right: 8px;
+        // }
+        @media screen and (max-width: 1070px) {
+            //font-size: 13px;
+            .opt {
+                display: none;
+            }
+        }
+        @media screen and (max-width: 960px) {
+            //font-size: 12px;
+        }
+        @media screen and (max-width: 900px) {
+            //padding-left: 4px;
+            //padding-right: 4px;
+        }
+        @media screen and (max-width: 820px) {
+            //padding-left: 2px;
+            //padding-right: 2px;
+        }
+    }
+}*/
 #language-switch-container {
   z-index: 9;
   position: fixed;
@@ -815,7 +936,7 @@ header.navbar {
 
 header.global {
   font-family: 'Open Sans';
-  padding: 0px 80px;
+  /*padding: 0px 80px;*/
   background-color: #2687ea;
   border-bottom: 1px solid #c2c0c1;
   color: #333;
@@ -829,7 +950,6 @@ header.global {
   /*a:visited {color: $monaca-blue; text-decoration: none;}*/
   /*a:hover {color: $monaca-blue; text-decoration: underline; width: auto;}*/
   /*a:active {color: $monaca-blue; text-decoration: none;}*/
-  /*new menu bar*/
   /*new menu bar*/ }
   header.global:after {
     content: ".";
@@ -844,16 +964,40 @@ header.global {
     color: #FFF;
     border-bottom: 3px solid #FFF; }
   header.global .sub-menu {
-    visibility: hidden;
-    /* hides sub-menu */
-    opacity: 0;
-    position: absolute;
-    top: 100%;
-    left: 0;
-    width: 100%;
-    transform: translateY(-2em);
-    z-index: -1;
-    transition: all 0.3s ease-in-out 0s, visibility 0s linear 0.3s, z-index 0s linear 0.01s; }
+    text-align: left; }
+    @media screen and (min-width: 767px) {
+      header.global .sub-menu {
+        position: absolute;
+        visibility: hidden;
+        /* hides sub-menu */
+        opacity: 0;
+        top: 100%;
+        left: 0;
+        width: 100%;
+        transform: translateY(-2em);
+        z-index: -1;
+        transition: all 0.3s ease-in-out 0s, visibility 0s linear 0.3s, z-index 0s linear 0.01s;
+        border: 1px solid #ebebeb;
+        background: #FFF;
+        border-radius: 3px;
+        width: 167px;
+        padding: 10px 0;
+        margin-left: 0px;
+        margin-top: 5px; }
+        header.global .sub-menu li > a {
+          color: #333;
+          font-size: 13px;
+          font-weight: normal; }
+        header.global .sub-menu li > a:hover {
+          color: #333;
+          background-color: #ebebeb; } }
+    @media screen and (max-width: 767px) {
+      header.global .sub-menu {
+        background: none;
+        margin-left: 25px; }
+        header.global .sub-menu a {
+          color: #c0c0c0;
+          font-weight: normal; } }
   header.global .sub-menu-parent:hover .sub-menu {
     visibility: visible;
     /* shows sub-menu */
@@ -870,6 +1014,10 @@ header.global {
     display: block;
     padding: 0.5em 1em;
     text-decoration: none; }
+    @media screen and (max-width: 767px) {
+      header.global nav a {
+        color: #fff;
+        text-align: left; } }
   header.global nav a:hover {
     color: #FFF; }
   header.global nav ul,
@@ -879,26 +1027,68 @@ header.global {
     margin: 0; }
   header.global nav > ul {
     text-align: center;
-    margin: 20px 0; }
-  header.global nav > ul > li {
-    display: inline-block; }
+    margin: 5px 0; }
+  @media screen and (min-width: 767px) {
+    header.global nav > ul > li {
+      display: inline-block; } }
   header.global nav > ul > li:first-child {
     border-left: none; }
-  header.global .sub-menu {
-    border: 1px solid #ebebeb;
-    background: #FFF;
-    border-radius: 3px;
-    width: 167px;
-    padding: 10px 0;
-    margin-left: 0px;
-    margin-top: 5px;
-    text-align: left; }
-    header.global .sub-menu li > a {
-      color: #333;
-      font-size: 13px;
-      font-weight: normal; }
-    header.global .sub-menu li > a:hover {
-      background-color: #ebebeb; }
+  header.global .navbar-toggle {
+    background-color: rgba(0, 0, 0, 0.16);
+    border-radius: 0;
+    border: none;
+    height: 50px;
+    margin: 0;
+    padding: 0 0 0 15px;
+    position: relative;
+    text-align: left;
+    width: 52px; }
+    header.global .navbar-toggle .icon-bar {
+      opacity: 0;
+      transition: opacity 140ms; }
+    header.global .navbar-toggle .icon-bar-left, header.global .navbar-toggle .icon-bar-right {
+      position: absolute;
+      background-color: #ffffff;
+      transition: transform 140ms cubic-bezier(0.34, 0.94, 0.69, 1);
+      transform-origin: bottom center;
+      float: left;
+      width: 14px;
+      height: 2px; }
+    header.global .navbar-toggle .icon-bar-left {
+      top: 24px;
+      left: 15px;
+      border-radius: 1px 0 0 1px;
+      transform: rotate(-45deg); }
+    header.global .navbar-toggle .icon-bar-right {
+      top: 24px;
+      right: 15px;
+      border-radius: 0 1px 1px 0;
+      transform: rotate(45deg); }
+    header.global .navbar-toggle .icon-bar + .icon-bar {
+      clear: both;
+      margin-top: 10px; }
+    header.global .navbar-toggle.collapsed {
+      background-color: transparent; }
+      header.global .navbar-toggle.collapsed .icon-bar {
+        opacity: 1; }
+      header.global .navbar-toggle.collapsed .icon-bar-left {
+        transform: rotate(0);
+        width: 12px; }
+      header.global .navbar-toggle.collapsed .icon-bar-right {
+        transform: rotate(0);
+        width: 12px; }
+  header.global .navbar-collapse {
+    background-color: #2687ea; }
+    @media screen and (max-width: 767px) {
+      header.global .navbar-collapse {
+        background-color: #2c2c2c;
+        border-top: none;
+        box-shadow: none;
+        float: none;
+        margin-left: 0;
+        margin-right: 0; } }
+    header.global .navbar-collapse .navbar-right {
+      margin-right: 0; }
   header.global .currentVersion {
     font-weight: bold;
     padding: 0 0.25em; }
@@ -907,7 +1097,7 @@ header.global {
   header.global .headcont {
     box-sizing: border-box;
     /*height: 70px;*/
-    margin: 0 auto;
+    margin: 0;
     padding: 0;
     /*left: 200px;*/
     position: relative; }
@@ -921,7 +1111,7 @@ header.global {
     height: 32px;
     line-height: 32px;
     margin: 0;
-    padding: 5px; }
+    padding: 5px 0; }
   header.global .version_selector {
     position: absolute;
     font-family: 'Open Sans', 'ヒラギノ角ゴ Pro W3','Hiragino Kaku Gothic ProN W3','Hiragino Kaku Gothic ProN','メイリオ',Meiryo,'ＭＳ Ｐゴシック',sans-serif;
@@ -2039,10 +2229,14 @@ div.overview-btn:hover {
     font-weight: 300; }
 
 table.products-guide {
-  width: 900px;
+  width: auto;
   text-align: center;
   margin: 0px auto;
   padding: 0; }
+  @media screen and (max-width: 767px) {
+    table.products-guide {
+      display: block;
+      width: 100%; } }
 
 div.api-box {
   width: 155px;
@@ -2052,6 +2246,10 @@ div.api-box {
   padding: 10px;
   border-radius: 5px;
   font-size: 18px; }
+  @media screen and (max-width: 767px) {
+    div.api-box {
+      display: block;
+      width: 40%; } }
   div.api-box a.title {
     color: #333;
     text-decoration: none; }
@@ -2070,6 +2268,11 @@ div.product-box {
   border-radius: 10px;
   color: #333;
   text-align: left; }
+  @media screen and (max-width: 767px) {
+    div.product-box {
+      width: 40%; }
+      div.product-box p {
+        font-size: 14px; } }
   div.product-box p {
     padding: 10px 10px 10px 70px;
     font-size: 18px;
@@ -2158,17 +2361,24 @@ div.container-updates {
   background-color: #f8f6f2;
   position: absolute;
   left: 0;
-  right: 0; }
+  right: 0;
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  flex-wrap: wrap; }
   div.container-updates h4 {
     color: #333;
     font-size: 24px;
     clear: both;
     font-weight: 300; }
   div.container-updates table.box-updates {
-    max-width: 1020px;
     width: 900px;
+    max-width: 1020px;
     margin: 0 auto;
     text-align: center; }
+    @media screen and (max-width: 767px) {
+      div.container-updates table.box-updates {
+        width: auto; } }
 
 /*============END OF INDEX=============*/
 article.main .comments {
