--- a/src/web/static/css/_index.scss
+++ b/src/web/static/css/_index.scss
@@ -16,24 +16,33 @@ hr {
 /*INDEX*/
 .center {
   text-align: center;
-  display: block;
+  display: flex;
+  flex-direction: column;
 }
 
 div.overview-btn{
+    @media screen and (max-width: $break) {
+        font-size: 100%;
+        width: auto;
+        height: auto;
+        margin: 15px 0 0 0;
+        border-radius: 5px;
+    }
+    padding: 10px;
     border-radius: 8px;
     background-color: #47b98f;
-    width: 350px;
-    height: 60px;
+    width: 370px;
+    height: auto;
     vertical-align: center;
     color: #fff;
-    font-size: 18px;
-    line-height: 60px;
+    font-size: 120%;
+    /*line-height: 60px;*/
     text-align: center;
     position: relative;
     left: 50%;
     top: 50%;
     transform: translate(-50%, -50%);
-    margin-top: 50px;
+    margin: 30px 0 0 0;
     a.title {
         color: #fff; 
         text-decoration: none;
@@ -271,11 +280,15 @@ p.updates-loading {
 }
 
 div.container-updates{
-    @media screen and (max-width: $break) {
-        display: none;
-    }
+    /*background-color: #f8f6f2;*/
+    width: auto;
+    /*left: 0; right: 0;*/
+    text-align: center;
+    /*margin: 0px 10%;*/
     margin-top: 20px;
-    width:100%; 
+
+    /*margin-top: 20px;
+    width:auto; 
     background-color: #f8f6f2;
     position: absolute;
     left: 0;
@@ -283,7 +296,7 @@ div.container-updates{
     display: flex;
     flex-direction: row;
     justify-content: center;
-    flex-wrap: wrap;
+    flex-wrap: wrap;*/
 
     h4 {
         color: #333;
@@ -295,11 +308,20 @@ div.container-updates{
     table.box-updates{
         @media screen and (max-width: $break) {
             width: auto;
+            display: none;
         }
         width: 900px;
         max-width: 1020px;
         margin: 0 auto;
         text-align: center;
+    }
+
+    div.mobile-box-updates{
+        @media screen and (min-width: $break) {
+            width: auto;
+            display: none;
+        }
+        /*margin: 0px 10%;*/
     }
 }
 
@@ -311,63 +333,151 @@ div.container-updates{
     @media screen and (min-width: $break) {
         display: none;
     }
-    width: 100%;
+    width: auto;
     /*left: 0; right: 0;*/
     text-align: center;
-    margin: 0px 10%;
+    /*margin: 0px 10%;*/
     padding: 0;
+    margin: 0;
+
+    
+
+    /*ul {
+            padding: 10px 15px 5px 15px;
+            font-size: 90%;
+            text-align: left;
+
+            li > a {
+                color: #c0c0c0;
+            
+            }
+
+            li > a:hover {
+                color: #333; 
+                background-color: #ebebeb;
+            }
+        }*/
+
+    
 }
 
-.Tablist {
-    /*@media screen and (min-width: $break) {
+    .Tablist {
+        display: flex;
+        flex-direction: row;
+        width: 100%;
+    }
+
+    .Tab {
+        flex-wrap: wrap;
+        font-size: 100%;
+        width: auto;
+        padding: 5px 15px;
+        margin: 0 10px 10px 0;
+        text-align: center;
+        background-color: #FFF;
+        border: solid 2px $monaca_dark;
+        border-bottom-width: 0;
+        border-radius: 8px 8px 0 0;
+        font-weight: bold;
+        color: #000;
+        text-decoration: none;
+        transition: background-color 0.1s;
+        cursor: pointer;
+        &:hover, &:focus {
+        background-color: mix(white,$monaca_dark,10%);
+        border-color: mix(white,$monaca_dark,10%);
+        outline: none;
+    }
+
+        &[aria-selected="false"]:active {
+            margin-top: 0.2em;
+            padding-bottom: 0.4em;
+            background: "#FFF";
+            color: $monaca_dark
+        }
+
+        &[aria-selected="true"] {
+            background: $monaca_dark;
+            cursor: default;
+            color: #FFF;
+        }
+    }
+
+    .products-tab, .api-tab {
+        background-color: #dcebf8;
+        width: 100%;
+        margin-top: -10px;
+        /*margin: -10px auto;*/
+        border: solid 2px $monaca_dark;
+
+        ul {
+            padding: 10px 15px 5px 15px;
+            font-size: 90%;
+            text-align: left;
+        }
+
+        ul > li > a {
+            color: #666666;
+            font-weight: bold;
+        }
+
+        ul > li > a:active, a:visited {
+            text-decoration: none;
+        }
+
+        ul > li {
+            line-height: 180%;
+        }
+
+        ul > li > ul > li {
+            line-height: 130%;
+        }
+
+        ul > li > ul > li > a{ 
+            font-weight: normal;
+        }
+    }
+
+    .environment-tab, .update-tab {
+        background-color: #f8f6f2;
+        width: 100%;
+        margin-top: -10px;
+        /*margin: -10px auto;*/
+        border: solid 2px $monaca_dark;
+
+        ul {
+            padding: 10px 15px 5px 15px;
+            font-size: 90%;
+            text-align: left;
+        }
+
+        ul > li > a {
+            color: #666666;
+            font-weight: bold;
+        }
+
+        ul > li > a:active, a:visited {
+            text-decoration: none;
+        }
+
+        ul > li {
+            line-height: 180%;
+        }
+
+        ul > li > ul > li {
+            line-height: 130%;
+        }
+
+        ul > li > ul > li > a{ 
+            font-weight: normal;
+        }
+    }
+
+    .hide {
         display: none;
-    }*/
-    display: flex;
-    flex-direction: row;
-    width: 100%
-    /*width: 100%;
-    left: 0; right: 0;
-    text-align: center;
-    margin: 0px 10%;
-    padding: 0;*/
-}
-
-.Tab {
-    flex-wrap: wrap;
-    font-size: 80%;
-    width: auto;
-    padding: 0.6em 1em;
-    margin: 0 10px 10px 0;
-    text-align: center;
-    background-color: #FFF;
-    border: solid 3px $monaca_dark;
-    border-bottom-width: 0;
-    border-radius: 8px 8px 0 0;
-    font-weight: bold;
-    color: darken($monaca_dark,20%);
-    text-decoration: none;
-    transition: background-color 0.1s;
-    cursor: pointer;
-    &:hover, &:focus {
-    background-color: mix(white,$monaca_dark,10%);
-    border-color: mix(white,$monaca_dark,10%);
-    outline: none;
     }
 
-    &[aria-selected="false"]:active {
-        margin-top: 0.2em;
-        padding-bottom: 0.4em;
-    }
 
-    &[aria-selected="true"] {
-        background: $monaca_dark;
-        cursor: default;
-        color: #FFF;
-    }
-}
 
-.products-tab {
-    width: 100%;
-    margin: -10px auto;
-    border: solid 2px $monaca_dark;
-}
+
+    
